<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Alarm Clock</string>
    <string name="alarm">Alarm</string>
    <string name="alarm_set_to">Alarmet kommer ringa om</string>
    <string name="alarms">Alarm</string>
    <string name="and">och</string>
    <string name ="cancel">Stäng</string>
    <string name ="change">Byt namn</string>
    <string name="createalarm">Skapa alarm</string>
    <string name="creategroup">Skapa grupp</string>
    <string name="delete">Radera</string>
    <string name="disable">Inaktivera</string>
    <string name="enable">Aktivera</string>
    <string name="everyday">Alla dagar</string>
    <string name="finish">Klar</string>
    <string name="friday">Fredag</string>
    <string name="group">Grupp</string>
    <string name="groups">Grupper</string>
    <string name="home">Hem</string>
    <string name="hours">timmar</string>
    <string name="ignore">Ignore</string>
    <string name="minutes">minuter</string>
    <string name="monday">Måndag</string>
	<string name ="namedialog">Namnge grupp</string>
	<string name ="not_available">Ej tillgänglig</string>
    <string name ="ok">Ok</string>
    <string name="overview">Översikt</string>
    <string name="overview_screen">OverviewScreen</string>
    <string name="repeat">Repetera</string>
    <string name="saturday">Lördag</string>
    <string name="sleepwarning">Sömnvarning</string>
    <string name="snooze">Snooze</string>
    <string name="snooze_message">Alarmet kommer ringa igen om</string>
    <string name="sound">Ljud</string>
    <string name="sunday">Söndag</string>
    <string name="thursday">Torsdag</string>
    <string name="tuesday">Tisdag</string>
    <string name="vibration">Vibration</string>
    <string name="wednesday">Onsdag</string>
</resources>
