<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent">
  
  	<LinearLayout 
		android:id="@+id/linearbottom"
		android:orientation="horizontal"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_alignParentBottom="true"
		android:gravity="center_horizontal"	>
		<Button 
			android:id="@+id/homeButton" 
			android:layout_height="wrap_content" 
			android:layout_width="85dip"
			android:text="@string/home"/>		
		<Button 
			android:id="@+id/overviewButton" 
			android:layout_height="wrap_content" 
			android:layout_width="85dip"
			android:text="@string/overview"/>
		<Button 
			android:id="@+id/alarmButton" 
			android:layout_height="wrap_content" 
			android:layout_width="85dip"
			android:text="@string/alarm"/>

	</LinearLayout>
</RelativeLayout>
