<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent">
    <TextView 
  		android:id="@+id/snoozeView" 
    	android:text="@string/alarm"
    	android:layout_width="fill_parent" 
    	android:layout_height="fill_parent" 
    	android:textAppearance="?android:attr/textAppearanceLarge" 
   	 	android:gravity="center_vertical|center_horizontal"/>
	<LinearLayout 
		android:id="@+id/linearbottom"
		android:orientation="horizontal"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_alignParentBottom="true"
		android:gravity="center_horizontal"	>   
		<Button 
    		android:text="@string/ignore"
    		android:id="@+id/ignoreButton"
    		android:layout_height="wrap_content" 
    		android:layout_width="150dip"/>	
    	<Button 
    		android:text="@string/snooze"
    		android:id="@+id/snoozeButton" 
    		android:layout_height="wrap_content" 
    		android:layout_width="150dip"/>
    		</LinearLayout>
  </RelativeLayout>
  



